--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
             "email": "acmicpc15@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "pecee/simple-router": "4.2.0.6"
+    },
     "autoload": {
         "psr-4": {
-            "App\\": "app"
+            "App\\": "app/"
         }
     }
 }
